--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
 
         <activity android:name=".view.HistoryMessage" android:launchMode="singleTask"></activity>
 
+        <activity android:name=".view.MessageInformationPage" android:launchMode="singleTask"></activity>
+
         <service android:name=".service.ClientService"></service>
     </application>
 
