--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".view.MessageInformationPage" android:launchMode="singleTask"></activity>
 
         <service android:name=".service.ClientService"></service>
+
+        <service android:name=".service.MemoryService"></service>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
